完善rag和mcp相关子工程